# email-triage-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  client.py  email_data.py  models.py  rewards.py
server/: __init__.py  app.py  environment.py  run.py
