[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv-compliant real-world benchmark for AI email triage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    # openenv-core is optional — the code has a graceful pydantic fallback.
    # Install it if you want full openenv validate support.
    # "openenv-core>=0.2.0",
]

# Bug 2 fix: main() is now defined in server/app.py
[project.scripts]
email-triage-env = "server.app:main"

[tool.setuptools.packages.find]
include = ["app*", "server*"]

[tool.openenv]
# Bug 1 fix: correct module path (was server.email_triage_env_new_environment)
env_class = "server.environment:EmailEnv"
action_cls = "app.models:EmailAction"
observation_cls = "app.models:EmailObservation"
state_cls = "app.models:EmailState"